/execute in minecraft:overworld run tp @s 149.31 -50.76 2147482525.35 1.35 31.95